# arkin

./: CMakeLists.txt  Makefile  compile_flags.txt
CMake/: x86_64-w64-mingw32.cmake
include/: arkin_core.h  arkin_log.h  arkin_test.h
src/: arkin_core.c  arkin_log.c  arkin_test.c  main.c
tests/: core.c  hash_map.c  linked_lists.c  main.c  pool.c  strings.c  test  test.h
